# machine-learning

./: LICENSE  pyproject.toml
machine_learning/datasets/: Decision_Tree_ Dataset.csv  data_2.csv
machine_learning/decision_tree/: main.py
machine_learning/linear_regression/: main.py
machine_learning/logistic_regression/: main.py
machine_learning/neural_networks/mpl/: main.py  model.py
machine_learning/neural_networks/perceptron/: main.py  perceptron.py
machine_learning/numpy_learn/: main.py
